[gd_scene load_steps=9 format=3 uid="uid://2lfbl8weq2hp"]

[ext_resource type="Script" path="res://game/shop_menu.gd" id="1_xmjc0"]
[ext_resource type="Texture2D" uid="uid://ch2g3ypv6u0g8" path="res://assets/carrot.png" id="2_82wkl"]
[ext_resource type="Texture2D" uid="uid://vg5dujiq6nsm" path="res://assets/tomato.png" id="3_6qqcw"]
[ext_resource type="Texture2D" uid="uid://c0gih2fn2onhe" path="res://assets/radish.png" id="4_dct8k"]
[ext_resource type="Texture2D" uid="uid://c6orydwti0xgt" path="res://assets/potato.png" id="5_bns0w"]
[ext_resource type="Texture2D" uid="uid://cenlemh6ss56r" path="res://assets/corn.png" id="6_qvcb6"]
[ext_resource type="Texture2D" uid="uid://b24s786tkefm" path="res://assets/back_button.png" id="7_iyf2h"]
[ext_resource type="AudioStream" uid="uid://ce02wp4qe5i3k" path="res://assets/sounds/bag_spawn.wav" id="8_60nf2"]

[node name="ShopMenuCanvas" type="CanvasLayer"]
visible = false
script = ExtResource("1_xmjc0")

[node name="ShopMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ShopMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 12.0
offset_right = 2.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ShopMenu/CenterContainer"]
custom_minimum_size = Vector2(180, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ShopMenu/CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ShopMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 9

[node name="Carrot" type="Button" parent="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Carrot
"
icon = ExtResource("2_82wkl")

[node name="Radish" type="Button" parent="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Radishes"
icon = ExtResource("4_dct8k")

[node name="Tomato" type="Button" parent="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tomatoes"
icon = ExtResource("3_6qqcw")

[node name="Potato" type="Button" parent="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Potatoes"
icon = ExtResource("5_bns0w")

[node name="Corn" type="Button" parent="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Corn"
icon = ExtResource("6_qvcb6")

[node name="ButtonSpace" type="Button" parent="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 13
size_flags_vertical = 8
size_flags_stretch_ratio = 4.73
text = "Back"
icon = ExtResource("7_iyf2h")
flat = true
text_overrun_behavior = 2
icon_alignment = 1

[node name="Back" type="TextureButton" parent="ShopMenu"]
clip_contents = true
layout_mode = 2
offset_left = 537.0
offset_top = 462.0
offset_right = 565.0
offset_bottom = 477.0
scale = Vector2(3, 3)
texture_normal = ExtResource("7_iyf2h")
ignore_texture_size = true
stretch_mode = 3

[node name="bag_spawn" type="AudioStreamPlayer2D" parent="ShopMenu"]
stream = ExtResource("8_60nf2")

[connection signal="pressed" from="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Carrot" to="." method="_on_carrot_pressed"]
[connection signal="pressed" from="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Radish" to="." method="_on_radish_pressed"]
[connection signal="pressed" from="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Tomato" to="." method="_on_tomato_pressed"]
[connection signal="pressed" from="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Potato" to="." method="_on_potato_pressed"]
[connection signal="pressed" from="ShopMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Corn" to="." method="_on_corn_pressed"]
[connection signal="pressed" from="ShopMenu/Back" to="." method="_on_texture_button_pressed"]
